--- a/3 gpu_mapping_checklist.json
+++ b/3 gpu_mapping_checklist.json
@@ -1,8 +1,6 @@
 {
-  "AMD R7 240 系列": null,
   "AMD RX550": "AMD Radeon RX 550",
   "AMD RX5500XT": "AMD Radeon RX 5500 XT",
-  "AMD RX560": null,
   "AMD RX5600XT": "AMD Radeon RX 5600 XT",
   "AMD RX570": "AMD Radeon RX 570",
   "AMD RX5700": "AMD Radeon RX 5700",
@@ -25,40 +23,29 @@
   "AMD Radeon 550 系列": "AMD Radeon RX 550",
   "AMD Radeon RX 550 系列": "AMD Radeon RX 550",
   "AMD Radeon RX7600-8G": "AMD Radeon RX 7600",
-  "AMD Radeon RX7600XT OC 16G": "AMD Radeon RX 7600",
+  "AMD Radeon RX7600XT OC 16G": "AMD Radeon RX 7600 XT",
   "AMD Radeon RX7650GRE-8G": "AMD Radeon RX 7650 GRE",
   "AMD Radeon RX7700XT-12G": "AMD Radeon RX 7700 XT",
   "AMD Radeon RX7700XT-12G(9/6晚上9點開賣)": "AMD Radeon RX 7700 XT",
   "AMD Radeon RX7800XT-16G": "AMD Radeon RX 7800 XT",
   "AMD Radeon RX7800XT-16G(9/6晚上9點開賣)": "AMD Radeon RX 7800 XT",
   "AMD Radeon RX7900GRE-16G": "AMD Radeon RX 7900 GRE",
-  "AMD Radeon RX7900XT-20G": "AMD Radeon RX 7900 GRE",
-  "AMD Radeon RX7900XTX-24G": "AMD Radeon RX 7900 GRE",
+  "AMD Radeon RX7900XT-20G": "AMD Radeon RX 7900 XT",
+  "AMD Radeon RX7900XTX-24G": "AMD Radeon RX 7900 XTX",
   "AMD Radeon RX9060XT-16G": "AMD Radeon RX 9060 XT 16 GB",
   "AMD Radeon RX9060XT-8G": "AMD Radeon RX 9060 XT",
   "AMD Radeon RX9070-16G": "AMD Radeon RX 9070",
-  "AMD Radeon RX9070GRE-12G": "AMD Radeon RX 9070",
-  "AMD Radeon RX9070XT-16G": "AMD Radeon RX 9070",
-  "AMD 專業級/工作站級 顯卡": null,
-  "AMD 工作站繪圖卡": null,
-  "AMD 工作站繪圖卡 (客訂交貨.歡迎議價)": null,
-  "INTEL ARC 顯示卡": null,
+  "AMD Radeon RX9070GRE-12G": "AMD Radeon RX 9070 GRE",
+  "AMD Radeon RX9070XT-16G": "AMD Radeon RX 9070 XT",
   "INTEL Arc A770 顯示卡": "Intel Arc A770",
   "INTEL Arc B570": "Intel Arc B570",
   "INTEL Arc B570 顯示卡": "Intel Arc B570",
   "INTEL Arc B580": "Intel Arc B580",
   "INTEL Arc B580 顯示卡": "Intel Arc B580",
-  "NVIDIA / AMD 外接式顯卡轉接盒": null,
-  "NVIDIA / AMD 外接顯卡轉接盒 (需另購顯卡)": null,
-  "NVIDIA / AMD 顯示卡周邊配件": null,
-  "NVIDIA GT1030": null,
-  "NVIDIA GT710": null,
-  "NVIDIA GT730": null,
   "NVIDIA GTX1050": "NVIDIA GeForce GTX 1050",
   "NVIDIA GTX1050 3G": "NVIDIA GeForce GTX 1050",
   "NVIDIA GTX1050Ti": "NVIDIA GeForce GTX 1050 Ti",
-  "NVIDIA GTX1060": "NVIDIA GeForce GTX 1060-3GB",
-  "NVIDIA GTX1630 (DDR6)": null,
+  "NVIDIA GTX1060": "NVIDIA GeForce GTX 1060",
   "NVIDIA GTX1650": "NVIDIA GeForce GTX 1650",
   "NVIDIA GTX1650 (DDR6)": "NVIDIA GeForce GTX 1650",
   "NVIDIA GTX1650 SUPER (DDR6)": "NVIDIA GeForce GTX 1650 SUPER",
@@ -66,9 +53,8 @@
   "NVIDIA GTX1660 SUPER (DDR6)": "NVIDIA GeForce GTX 1660 SUPER",
   "NVIDIA GTX1660Ti": "NVIDIA GeForce GTX 1660 Ti",
   "NVIDIA GTX1660Ti (無類比輸出)": "NVIDIA GeForce GTX 1660 Ti",
-  "NVIDIA GeForce 210": null,
-  "NVIDIA Quadro 專業繪圖卡": "NVIDIA Quadro M4000",
-  "NVIDIA Quadro 專業繪圖卡 (歡迎議價)": "NVIDIA Quadro RTX A6000",
+  "NVIDIA Quadro 專業繪圖卡": null,
+  "NVIDIA Quadro 專業繪圖卡 (歡迎議價)": null,
   "NVIDIA RTX2060": "NVIDIA GeForce RTX 2060",
   "NVIDIA RTX2060 SUPER": "NVIDIA GeForce RTX 2060 SUPER",
   "NVIDIA RTX2060(12G)": "NVIDIA GeForce RTX 2060 12 GB",
@@ -88,9 +74,9 @@
   "NVIDIA RTX3060-8G": "NVIDIA GeForce RTX 3060 8 GB",
   "NVIDIA RTX3060-8GB": "NVIDIA GeForce RTX 3060 8 GB",
   "NVIDIA RTX3060TI": "NVIDIA GeForce RTX 3060 Ti",
-  "NVIDIA RTX3060TI-8G": "NVIDIA GeForce RTX 3060",
-  "NVIDIA RTX3060TI-8G(GDDR6)": "NVIDIA GeForce RTX 3060",
-  "NVIDIA RTX3060TI-8G(GDDR6X)": "NVIDIA GeForce RTX 3060",
+  "NVIDIA RTX3060TI-8G": "NVIDIA GeForce RTX 3060 Ti",
+  "NVIDIA RTX3060TI-8G(GDDR6)": "NVIDIA GeForce RTX 3060 Ti",
+  "NVIDIA RTX3060TI-8G(GDDR6X)": "NVIDIA GeForce RTX 3060 Ti GDDR6X",
   "NVIDIA RTX3070": "NVIDIA GeForce RTX 3070",
   "NVIDIA RTX3070 Ti": "NVIDIA GeForce RTX 3070 Ti",
   "NVIDIA RTX3080": "NVIDIA GeForce RTX 3080",
@@ -108,17 +94,17 @@
   "NVIDIA RTX4060Ti-16G": "NVIDIA GeForce RTX 4060 Ti 16 GB",
   "NVIDIA RTX4060Ti-8G": "NVIDIA GeForce RTX 4060 Ti 8 GB",
   "NVIDIA RTX4060Ti-8GB": "NVIDIA GeForce RTX 4060 Ti 8 GB",
-  "NVIDIA RTX4070 SUPER 12GB": "NVIDIA GeForce RTX 4070",
-  "NVIDIA RTX4070 SUPER 12GB(1/17晚上10點開賣)": "NVIDIA GeForce RTX 4070",
+  "NVIDIA RTX4070 SUPER 12GB": "NVIDIA GeForce RTX 4070 SUPER",
+  "NVIDIA RTX4070 SUPER 12GB(1/17晚上10點開賣)": "NVIDIA GeForce RTX 4070 SUPER",
   "NVIDIA RTX4070-12G": "NVIDIA GeForce RTX 4070",
   "NVIDIA RTX4070-12GB": "NVIDIA GeForce RTX 4070",
   "NVIDIA RTX4070-12GB (GDDR6)": "NVIDIA GeForce RTX 4070",
   "NVIDIA RTX4070-12GB (GDDR6X)": "NVIDIA GeForce RTX 4070",
-  "NVIDIA RTX4070TI-12G": "NVIDIA GeForce RTX 4070",
-  "NVIDIA RTX4070TI-12GB": "NVIDIA GeForce RTX 4070",
-  "NVIDIA RTX4070Ti 12GB": "NVIDIA GeForce RTX 4070",
-  "NVIDIA RTX4070Ti SUPER 16GB": "NVIDIA GeForce RTX 4070",
-  "NVIDIA RTX4080 SUPER 16GB": "NVIDIA GeForce RTX 4080",
+  "NVIDIA RTX4070TI-12G": "NVIDIA GeForce RTX 4070 Ti",
+  "NVIDIA RTX4070TI-12GB": "NVIDIA GeForce RTX 4070 Ti",
+  "NVIDIA RTX4070Ti 12GB": "NVIDIA GeForce RTX 4070 Ti",
+  "NVIDIA RTX4070Ti SUPER 16GB": "NVIDIA GeForce RTX 4070 Ti SUPER",
+  "NVIDIA RTX4080 SUPER 16GB": "NVIDIA GeForce RTX 4080 SUPER",
   "NVIDIA RTX4080-16G": "NVIDIA GeForce RTX 4080",
   "NVIDIA RTX4080-16G [11/16 10PM 開賣]": "NVIDIA GeForce RTX 4080",
   "NVIDIA RTX4080-16GB": "NVIDIA GeForce RTX 4080",
@@ -126,16 +112,15 @@
   "NVIDIA RTX5050-8GB(GDDR6)": "NVIDIA GeForce RTX 5050",
   "NVIDIA RTX5060-8GB(GDDR7)": "NVIDIA GeForce RTX 5060",
   "NVIDIA RTX5060Ti-16GB(GDDR7)": "NVIDIA GeForce RTX 5060 Ti 16 GB",
-  "NVIDIA RTX5060Ti-8GB(GDDR7)": "NVIDIA GeForce RTX 5060",
+  "NVIDIA RTX5060Ti-8GB(GDDR7)": "NVIDIA GeForce RTX 5060 Ti 8 GB",
   "NVIDIA RTX5070-12GB(GDDR7)": "NVIDIA GeForce RTX 5070",
   "NVIDIA RTX5070-12GB(GDDR7) 3/5-10點開賣": "NVIDIA GeForce RTX 5070",
-  "NVIDIA RTX5070Ti-16GB(GDDR7)": "NVIDIA GeForce RTX 5070",
-  "NVIDIA RTX5070Ti-16GB(GDDR7)-2/20晚上10點開賣": "NVIDIA GeForce RTX 5070",
+  "NVIDIA RTX5070Ti-16GB(GDDR7)": "NVIDIA GeForce RTX 5070 Ti",
+  "NVIDIA RTX5070Ti-16GB(GDDR7)-2/20晚上10點開賣": "NVIDIA GeForce RTX 5070 Ti",
   "NVIDIA RTX5080-16GB(GDDR7)": "NVIDIA GeForce RTX 5080",
   "NVIDIA RTX5090-16GB(GDDR7) 年節期間現貨+預定皆已完售！": "NVIDIA GeForce RTX 5090",
   "NVIDIA RTX5090-32GB(GDDR7)": "NVIDIA GeForce RTX 5090",
   "NVIDIA RTX5090-32GB(GDDR7) 年節期間現貨+預定皆已完售！": "NVIDIA GeForce RTX 5090",
-  "NVIDIA 外接式顯卡轉接盒": null,
-  "NVIDIA 專業繪圖卡": "NVIDIA Quadro RTX A6000",
-  "微星 RX6600XT MECH 2X 8G V1(2589MHz/21.5cm/註四年)*參考價$13490": "AMD Radeon RX 6600"
+  "NVIDIA 專業繪圖卡": null,
+  "微星 RX6600XT MECH 2X 8G V1(2589MHz/21.5cm/註四年)*參考價$13490": "AMD Radeon RX 6600 XT"
 }
